--- a/stylesheets/design.css
+++ b/stylesheets/design.css
@@ -3,7 +3,6 @@
 }
 html, body {
 	height: 100%;
-	overflow: hidden;
 	margin: 0;
 }
 .wrapper {
@@ -15,7 +14,9 @@ html, body {
 #body_div {
 	margin-left: 10px;
 	margin-right: 10px;
-	margin-top: 10px;
+}
+#heading {
+	text-align: center;
 }
 #controls_table {
 	width: 100%;
@@ -25,6 +26,27 @@ html, body {
 }
 #controls_table_right {
 	text-align: right;
+}
+#db_div {
+	overflow: auto;
+	white-space: nowrap;
+}
+table.db_table {
+	width: 100%;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+}
+table.db_table th {
+	background: #eee;
+	padding: 5px;
+	border-left: 1px solid #ccc;
+	border-top: 1px solid #ccc;
+}
+table.db_table td {
+	padding: 5px;
+	border-left: 1px solid #ccc;
+	border-top: 1px solid #ccc;
+	font-size: 10pt;
 }
 .footer, .push {
 	height: 2em;
