--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,11 @@
 doctype html
 html
   head
-    title= title
+    meta(charset='utf-8')
+    title #{title}
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
     script(src='/javascripts/jquery-2.1.1.min.js')
+    script(src='/bootstrap/js/bootstrap.js')
