Footer on main page
The main page now has a footer with copyright info in it.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,3 +4,12 @@
 .default-left-margin {
 	margin-left: 5px;
 }
+.footer-div {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	z-index: 10;
+	text-align: center;
+	font-size: 8pt;
+}
