Moved footer to the layout file
The layout file now contains the footer so that it will propagate across all pages of the web application.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,9 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    .footer-blank-div
+      p &nbsp;
+    .footer-div
+      p Copyright &copy; 2014 Viraj Chitnis. All Rights Reserved.
     script(src='/javascripts/jquery-2.1.1.min.js')
     script(src='/bootstrap/js/bootstrap.js')
