--- a/views/index.jade
+++ b/views/index.jade
@@ -7,3 +7,13 @@ block content
         a.navbar-brand(href='#') #{appname}
       button.btn.btn-default.navbar-btn.disabled(type='button') Accounts
       button.btn.btn-default.navbar-btn.default-left-margin(type='button') Contacts
+  #toolbar
+    button.btn.btn-default(title='Add an entry')
+      span.glyphicon.glyphicon-plus
+      span &nbsp;Add
+    button.btn.btn-default.default-left-margin(title='Edit an entry')
+      span.glyphicon.glyphicon-pencil
+      span &nbsp;Edit
+    button.btn.btn-default.default-left-margin(title='Delete an entry')
+      span.glyphicon.glyphicon-trash
+      span &nbsp;Delete
