Added table wrapper
Added a div that will serve as the table wrapper.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,3 +20,12 @@ body {
 	margin: 10px;
 	text-align: center;
 }
+#table-wrapper {
+	position: absolute;
+	left: 10px;
+	top: 112px;
+	background-color: #ccc;
+	height: calc(100% - 145px);
+	width: calc(100% - 20px);
+	overflow: auto;
+}
