--- a/views/index.jade
+++ b/views/index.jade
@@ -17,3 +17,4 @@ block content
     button.btn.btn-default.btn-sm.default-left-margin(title='Delete an entry')
       span.glyphicon.glyphicon-trash
       span &nbsp;Delete
+  #table-wrapper
