--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,14 +18,20 @@ body {
 }
 #toolbar {
 	margin: 10px;
-	text-align: center;
 }
 #table-wrapper {
 	position: absolute;
 	left: 10px;
 	top: 112px;
-	background-color: #ccc;
 	height: calc(100% - 145px);
 	width: calc(100% - 20px);
 	overflow: auto;
+}
+.inner-shadow {
+	-moz-box-shadow: inset 0 0 7px #000000;
+	-webkit-box-shadow: inset 0 0 7px #000000;
+	box-shadow: inset 0 0 7px #000000;
+}
+.float-right {
+	float: right;
 }
