Recolored the toolbar buttons
The toolbar buttons now have indicative colors.

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,13 +8,13 @@ block content
       button.btn.btn-default.navbar-btn.disabled(type='button') Accounts
       button.btn.btn-default.navbar-btn.default-left-margin(type='button') Contacts
   #toolbar
-    button.btn.btn-default.btn-sm(title='Add an entry')
+    button.btn.btn-primary.btn-sm(title='Add an entry')
       span.glyphicon.glyphicon-plus
       span &nbsp;Add
-    button.btn.btn-default.btn-sm.default-left-margin(title='Edit an entry')
+    button.btn.btn-warning.btn-sm.default-left-margin(title='Edit an entry')
       span.glyphicon.glyphicon-pencil
       span &nbsp;Edit
-    button.btn.btn-default.btn-sm.default-left-margin(title='Delete an entry')
+    button.btn.btn-danger.btn-sm.default-left-margin(title='Delete an entry')
       span.glyphicon.glyphicon-trash
       span &nbsp;Delete
     .dropdown.float-right
