--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,3 +13,5 @@ html
       p Copyright &copy; 2014 Viraj Chitnis. All Rights Reserved.
     script(src='/javascripts/jquery-2.1.1.min.js')
     script(src='/bootstrap/js/bootstrap.js')
+    if title == "Accounts - OfficeDB"
+      script(src='/javascripts/index.js')
