Enable all nav bar buttons
All nav bar buttons are now enabled.

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
     .container-fluid
       .navbar-header
         a.navbar-brand(href='#') #{appname}
-      button.btn.btn-default.navbar-btn.disabled(type='button') Accounts
+      button.btn.btn-default.navbar-btn(type='button') Accounts
       button.btn.btn-default.navbar-btn.default-left-margin(type='button') Contacts
   #toolbar
     button.btn.btn-primary.btn-sm(title='Add an entry')
