Highlight table on hover
When an entry in the table is hovered over, it gets highlighted.

--- a/views/index.jade
+++ b/views/index.jade
@@ -41,7 +41,7 @@ block content
           a(role='menuitem', tabindex='-1', href='#')
             span June '13
   #table-wrapper
-    table#accountsTable.table.table-striped
+    table#accountsTable.table.table-striped.table-hover
       tr
         th
         th Memo No.
