Switched all js links to void
All js links now link to 'javascript:void(0)' instead of '#'.

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   nav.navbar.navbar-default.default-margins(role='navigation')
     .container-fluid
       .navbar-header
-        a.navbar-brand(href='#') #{appname}
+        a.navbar-brand(href='javascript:void(0)') #{appname}
       button.btn.btn-default.navbar-btn(type='button') Accounts
       button.btn.btn-default.navbar-btn.default-left-margin(type='button') Contacts
   #toolbar
@@ -24,7 +24,7 @@ block content
         span.caret
       ul.dropdown-menu.dropdown-menu-right(role='menu', aria-labelledby='settings-dropdown')
         li#enableTableBordersButton(role='presentation')
-          a(role='menuitem', tabindex='-1', href='#')
+          a(role='menuitem', tabindex='-1', href='javascript:void(0)')
             span Table borders
     .dropdown.float-right.default-right-margin
       button.btn.btn-default.btn-sm.dropdown-toggle(type='button', data-toggle='dropdown')
@@ -32,13 +32,13 @@ block content
         span.caret
       ul.dropdown-menu.dropdown-menu-right(role='menu', aria-labelledby='settings-dropdown')
         li(role='presentation')
-          a(role='menuitem', tabindex='-1', href='#')
+          a(role='menuitem', tabindex='-1', href='javascript:void(0)')
             span Apr '13
         li(role='presentation')
-          a(role='menuitem', tabindex='-1', href='#')
+          a(role='menuitem', tabindex='-1', href='javascript:void(0)')
             span May '13
         li(role='presentation')
-          a(role='menuitem', tabindex='-1', href='#')
+          a(role='menuitem', tabindex='-1', href='javascript:void(0)')
             span June '13
   #table-wrapper
     table#accountsTable.table.table-striped.table-hover
