--- a/views/index.jade
+++ b/views/index.jade
@@ -4,28 +4,37 @@ block content
   nav.navbar.navbar-default.default-margins(role='navigation')
     .container-fluid
       .navbar-header
-        a.navbar-brand(href='javascript:void(0)') #{appname}
-      button.btn.btn-default.navbar-btn(type='button') Accounts
-      button.btn.btn-default.navbar-btn.default-left-margin(type='button') Contacts
-      ul.nav.navbar-nav.navbar-right
-        li.dropdown
-          a.dropdown-toggle(href='javascript:void(0)', data-toggle='dropdown')
-            span.glyphicon.glyphicon-user
-            span &nbsp;
-            span Viraj Chitnis
-            span &nbsp;
-            span.caret
-          ul.dropdown-menu(role='menu')
-            li
-              a(href='javascript:void(0)')
-                span.glyphicon.glyphicon-cog
-                span &nbsp;
-                span Account settings
-            li
-              a(href='javascript:void(0)')
-                span.glyphicon.glyphicon-log-out
-                span &nbsp;
-                span Logout
+        button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='#') #{appname}
+      .collapse.navbar-collapse#bs-example-navbar-collapse-1
+        ul.nav.navbar-nav
+          li.active
+            a(href='javascript:void(0)') Accounts
+          li
+            a(href='javascript:void(0)') Contacts
+        ul.nav.navbar-nav.navbar-right
+          li.dropdown
+            a.dropdown-toggle(href='javascript:void(0)', data-toggle='dropdown')
+              span.glyphicon.glyphicon-user
+              span &nbsp;
+              span Viraj Chitnis
+              span &nbsp;
+              span.caret
+            ul.dropdown-menu(role='menu')
+              li
+                a(href='javascript:void(0)')
+                  span.glyphicon.glyphicon-cog
+                  span &nbsp;
+                  span Account settings
+              li
+                a(href='javascript:void(0)')
+                  span.glyphicon.glyphicon-log-out
+                  span &nbsp;
+                  span Logout
   #toolbar
     button.btn.btn-primary.btn-sm(title='Add an entry')
       span.glyphicon.glyphicon-plus
