Disabled the contacts tab from the nav bar
The nav bar now only has an 'Accounts' tab, the 'Contacts' tab has been disabled because it may never be needed.

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,8 +14,8 @@ block content
         ul.nav.navbar-nav
           li.active
             a(href='javascript:void(0)') Accounts
-          li
-            a(href='javascript:void(0)') Contacts
+          //- li
+            //- a(href='javascript:void(0)') Contacts
         ul.nav.navbar-nav.navbar-right
           li.dropdown
             a.dropdown-toggle(href='javascript:void(0)', data-toggle='dropdown')
